--- a/css/style.css
+++ b/css/style.css
@@ -268,3 +268,39 @@ html{
     font-size: 15px;
     margin-bottom: 10%;
 }
+/* ----------------------------------------------------------WORK--------------------------------------------------------------- */
+.work-link{
+    margin-top: 5%;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    font-size: 32px;
+}
+.work-menu{
+    margin-left: 10%;
+    text-align: center;
+    display: block;
+    height: 5%;
+    width: 80%;
+    color: #000000;
+    font-size: 20px;
+    margin-bottom: 10%; 
+    
+}
+.work-menu1{
+    display: inline-block;
+    width: 20%;
+
+}
+.work-menu2{
+    display: inline-block;  
+    width: 20%;
+}
+.work-menu3{
+    display: inline-block; 
+    width: 20%;
+}
+.work-menu4{
+    display: inline-block;
+    width: 20%;
+}
