Add not use block

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 html{
     margin: 0;  
 }
+
+h2 {
+    text-align: center;
+    margin-top: 2%;
+    font-size: 4em;
+}
 /* ---------------------------------main----------------------------------------- */
 .main{
     margin: 0;
@@ -94,6 +100,17 @@ html{
     background-repeat: no-repeat;
     background-size: 120%;
 }
+
+/* ---------------------------------not-use----------------------------------------- */
+.not-use {
+    width: 100%;
+    height: 100vh;
+}
+
+.not-use-list {
+    text-align: center;
+}
+
 /* ---------------------------------servises----------------------------------------- */
 .services{
     margin-top: 5%;
