--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h2 {
     vertical-align: top;
     text-decoration: none;
     color: #333;
-    margin-right: 7%;
+    margin-right: 8%;
     transition: color .1s linear;
     font-size: 24px;
     position: relative;
@@ -137,7 +137,7 @@ h2 {
     margin-left: 17%;
     padding: 30px;
     width: 30%;
-    height: 190px;
+    height: auto;
     
 }
 .services-blocv{
@@ -180,7 +180,7 @@ h2 {
 .services-blocs-img{
     display: inline-block;
     width: 30%;
-    height: 170px;
+    height: 20%;
     margin-right: 10%;
 }
 .services-blocr-img{
@@ -337,4 +337,78 @@ h2 {
 }
 .work-link-menu:hover:after{
     opacity: 1;
+}
+/* -------------------------------------------------------worcking ---------------------------------------------------------*/
+.working{
+    width: 100%;
+    height: 750px;
+    text-align: center;
+    text-decoration: none;
+    color: #000000;
+
+}
+.working-link{
+
+    font-size: 36px;
+}
+.working-img{
+    margin-top: 6%;
+    margin-bottom: 1%;
+    width: 80%;
+    margin-left: 10%;
+    height: 190px;
+}
+.working-bloc1{
+    display:flex;
+    justify-content: space-between;
+    text-align: start;
+    font-weight: bold;
+    font-size: 34px;
+    width: 80%;
+    margin-left: 10%;
+
+}
+.working-bloc2{
+    display:flex;
+    justify-content: space-between;
+    text-align: start;
+    font-size: 34px;
+    
+    width: 80%;
+    margin-left: 10%;
+ 
+}
+.working-bloc1-text{
+    display: inline-block;
+    text-align: start;
+    width: 12%;
+
+    color: #000000;
+    text-decoration: none;
+}
+.working-bloc2-text{
+    font-size: 15px;
+    text-align: start;
+    width: 12%;
+    height: auto;
+    display: inline-block;
+
+    color: #000000;
+    text-decoration: none; 
+}
+.working-button{
+    font-family:roboto slab;
+    margin-top: 10%;
+    font-size: 18px;
+    font-weight: bold;
+    width: 20%;
+    display: inline-block;
+    width: 15em;
+    color: rgba(255,255,255,.9);
+    text-decoration: none;
+    text-align: center;
+    border-radius:40px;
+    outline: none;
+    background: #60a3d8 linear-gradient(to right,#01c4d2, #957c8f 50%, #c94a65);
+    padding: 1em 0;
 }
